performJITMemcpy() should do its !Gigacage assertion on exit. https://bugs.webkit.org/show_bug.cgi?id=201780 <rdar://problem/55354867>

Reviewed by Robin Morisset.

* jit/ExecutableAllocator.h:
(JSC::GigacageAssertScope::GigacageAssertScope):
(JSC::GigacageAssertScope::~GigacageAssertScope):
(JSC::performJITMemcpy):



Canonical link: https://commits.webkit.org/215413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249857 268f45cc-cd09-0410-ab3c-d52691b4dbfc